# nextjs-geist-font-project

.next/: trace
.next/static/chunks/: _be8977ea._.js  _be8977ea._.js.map
agrim_system/.github/workflows/: ci.yml
agrim_system/ai_agents/: kutajkutambi_agent.py  kutajkutambi_agent_open_source.py
agrim_system/backend/: app.py
agrim_system/backend/models/: irrigation_model.py
agrim_system/docs/: README_AI_Modules.md
agrim_system/k8s/: agriml-deployment.yaml  agriml-service.yaml
agrim_system/python_ai/: advanced_crop_models.py  cnn_knn_models.py  crop_yield_models.py  irrigation_models.py  requirements.txt  soil_models.py  weather_models.py
agrim_system/tests/: test_advanced_features.py  test_crop_yield_models.py  test_irrigation_model.py  test_irrigation_models.py  test_weather_models.py
agriml_system/: README.md
agriml_system/cpp_weather/: CMakeLists.txt  kafka_client.cpp  weather_processing.cpp
agriml_system/cpp_weather/tests/: weather_processing_test.cpp
agriml_system/docker/cpp_weather/: Dockerfile
agriml_system/docker/python_ai/: Dockerfile
agriml_system/docker/rust_edge/: Dockerfile
agriml_system/proto/: agriml.proto
agriml_system/python_ai/: advanced_features.py  crop_disease_detection.py  kafka_integration.py  keras_models.py  requirements.txt  test_crop_disease_detection.py
agriml_system/rust_edge/: Cargo.toml  build.rs
agriml_system/rust_edge/src/: kafka_client.rs  main.rs
agriml_system/rust_edge/tests/: integration_test.rs
